Started on ui for question

--- a/app/index.html
+++ b/app/index.html
@@ -2,7 +2,7 @@
 <html class="no-js" ng-app="famousAngularStarter">
   <head>
     <meta charset="utf-8">
-    <title>Famo.us/Angular</title>
+    <title>EPQ</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
@@ -12,11 +12,11 @@
     <!-- endbower -->
     <!-- endbuild -->
 
+    <link href='http://fonts.googleapis.com/css?family=Oswald:400,700' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="bower_components/famous-angular/dist/famous-angular.css">
     <!-- build:css({.tmp,app}) styles/main.css -->
     <link rel="stylesheet" href="styles/main.css">
     <!-- endbuild -->
-    <link rel="stylesheet" href="bower_components/famous-angular/dist/famous-angular.css">
-
   </head>
   <body>
 
@@ -38,6 +38,7 @@
     <!-- build:js({app,.tmp}) scripts/main.js -->
     <script src="scripts/famousAngularStarter.js"></script>
     <script src="scripts/main/main-ctrl.js"></script>
+    <script src="scripts/services/ep-service.js"></script>
     <!-- inject:partials -->
     <!-- endinject -->
     <!-- endbuild -->
